--- a/eFormsDark.css
+++ b/eFormsDark.css
@@ -337,7 +337,7 @@ div[class="item"] div{margin-bottom:.5em;}
 body{color:#d3d3d3;}
 }
 
-@-moz-document url-prefix("https://web3.cincinnatistate.edu/eforms/admin/owner_form_reassign.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_elements.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/order_elements.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_reviewers.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_processors.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/eform.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/eform_validate.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/confirm.aspx") {
+@-moz-document url-prefix("https://web3.cincinnatistate.edu/eforms/admin/owner_form_reassign.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_elements.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/order_elements.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_reviewers.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/admin/form_processors.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/eform.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/eform_validate.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/confirm.aspx"), url-prefix("https://web3.cincinnatistate.edu/eforms/no_auth.aspx") {
 .yellow-box,
 .section-none {
     color: black;
