--- a/eFormsDark.css
+++ b/eFormsDark.css
@@ -211,7 +211,7 @@ i[class="fas fa-pencil-alt fa-1x cstate-green"]{color:unset;}/*ignore pencil ico
 i[class="fas fa-star fa-1x cstate-green"]{color:unset;}
 i[class="fad fa-user-cog fa-3x cstate-green"]{color:unset;}
 
-span[style="color: #1F2023"],
+span[style="color: Black"],
 .standard-fields-title span {
     color: white!important;
 }
